@@ -111,7 +111,7 @@
               </packing>
             </child>
             <child>
-              <object class="GtkBox" id="box2">
+              <object class="GtkBox" id="MaterialBox">
                 <property name="width_request">240</property>
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
