@@ -1,5 +1,11 @@
 2014-07-05  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* BrowserWindow.cpp:
+	* MaterialEditor.cpp:
+	* MaterialEditor.xml: 
+
+2014-07-05  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* BrowserWindow.xml: 
 
 2014-07-05  Holger Seelig  <holger.seelig@yahoo.de>
